# autoinvoice

./: .gitignore  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/autoinvoice/: __init__.py  cli.py  config.py  display.py  gmail_trigger.py  invoice_builder.py
src/autoinvoice/moneyforward/: auth.py  client.py  invoices.py  mail.py  partners.py
src/autoinvoice/sheets/: parser.py  reader.py
tests/: test_gmail_trigger.py  test_invoice_builder.py  test_parser.py
